--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "cva": "npm:class-variance-authority@^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -35,7 +36,8 @@
     "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.3.0"
+    "babel-loader": "^8.3.0",
+    "tailwindcss": "^3.2.4"
   },
   "browserslist": {
     "production": [
